--- a/html/port.html
+++ b/html/port.html
@@ -34,7 +34,7 @@
         <div class="home-content">
             <h3>Hello, It's Me</h3>
             <h1>Ikechi Uduka</h1>
-            <h3>And I'm a <span>Software Developer</span></h3>
+            <h3>And I'm a <span class="multiple-text"></span></h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis perferendis qui labore quaerat, in saepe! Expedita quos consequatur distinctio sed consectetur sit iste accusantium tempore voluptatibus, optio minima nemo est.</p>
         
         <div class="social-media">,
@@ -102,7 +102,7 @@
             <img src="/assets/9.png" alt="">
             <div class="portfolio-layer">
                 <h4>Web Development</h4>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum quod, quia incidunt officiis saepe aspernatur.</p>
                 <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
            </div>
         </div>
@@ -112,7 +112,7 @@
             <img src="/assets/3.png" alt="">
             <div class="portfolio-layer">
                 <h4>Graphic Design</h4>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque maiores corporis suscipit autem pariatur nisi.</p>
                 <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
            </div>
         </div>
@@ -122,7 +122,7 @@
             <img src="/assets/4.png" alt="">
             <div class="portfolio-layer">
                 <h4>3D Animation</h4>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi omnis eum neque, deserunt architecto ad!</p>
                 <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
            </div>
         </div>
@@ -132,7 +132,7 @@
             <img src="/assets/6.png" alt="">
             <div class="portfolio-layer">
                 <h4>Web Development</h4>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt impedit quod, adipisci quaerat harum debitis?</p>
                 <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
            </div>
         </div>
@@ -141,7 +141,7 @@
             <img src="/assets/7.png" alt="">
             <div class="portfolio-layer">
                 <h4>Graphic Design</h4>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam voluptatum voluptate eligendi dolorem, odio dolorum?</p>
                 <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
            </div>
         </div>
@@ -150,7 +150,7 @@
             <img src="/assets/8.png" alt="">
             <div class="portfolio-layer">
                 <h4>Graphic Design</h4>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat consectetur itaque vitae numquam, autem iste?</p>
                 <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
            </div>
         </div>
@@ -182,12 +182,20 @@
 
     <footer class="footer">
         <div class="footer-text">
-            <p>Copyright &copy;2023 by Smartwebix | All Right Reserved.  </p>
+            <p>Copyright &copy; 2025 by Smartwebix | All Right Reserved.  </p>
         </div>
         <div class="footer-iconTop">
             <a href="#home"><i class="fa-solid fa-arrow-up"></i></a>
         </div>
     </footer>
+    <!-- scroll reveal -->
+     <script src="https://unpkg.com/scrollreveal"></script>
 
+
+     <!-- typed js -->
+      <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+
+
+<script src="/javascript/port.js"></script>
 </body>
 </html>
